--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Practica web app</title>
 </head>
 <body>
-    
+
     <main>
-        <h1>Practica ITSX</h1>
+        <h1>Practica ITSX taller de base de datos</h1>
         <section>
             <div class="card">
                 <div class="card-body">
@@ -29,4 +29,4 @@
         })
     </script>
 </body>
-</html>
+</html> 
