--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section>
             <div class="card">
                 <div class="card-body">
-                    Pagina web en azure
+                    Pagina web en azure Equipo 3
                     <button id="btn">Saluda</button>
                 </div>
             </div>
